--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link type="Image/x-icon" href="/favicon.ico" rel="icon">
   </head>
   <body class="page">
+    <!-- <section class="cover"> -->
     <header class="header decorated-zone">
+      <a class="header__logo header__menu-link">
+          rec
+      </a>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -34,7 +46,134 @@
           </li>
         </ul>
       </nav>
+      <h1 class="cover__title">
+        no focus
+      </h1>
+      <section class="content-section content-section_theme_dark">
+        <div class="heading">
+            <h2 class="title">
+              Что делать, когда не можешь делать ничего 
+              Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+            </h2>
+        </div>
+      </section>
     </header>
+    
+    <main class="main-text">
+      <section class="content-section content-section_theme_dark">
+        <div class="title_two">
+          <h3 class="intro__title">
+            Почему сосредоточиться так сложно
+          </h3>
+        <p class="content-section__introduction">
+          Многозадачность
+        </p>
+        <p class="card__text">
+          Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
+          Исследователи <span class="accent-span">выяснили</span>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+        </p>
+        <p class="content-section__introduction">
+          Дофамин
+        </p>
+        <p class="card__text">
+          С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+        </p>
+      </section>
+      <section class="content-section content-section_theme_dark">
+        <div class="title_two">
+          <h3 class="intro__title">
+            Что снижает концентрацию внимания?
+          </h3>
+          <p class="content-section__introduction">
+            Многозадачность
+          </p>
+          <p class="card__text">
+            Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
+          </p>
+          <p class="content-section__introduction">
+            Еда
+          </p>
+          <p class="card__text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
+          </p>
+          <p class="content-section__introduction">
+            Гаджеты
+          </p>
+          <p class="card__text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
+          </p>
+        </div>
+      </section>
+
+      <section class="content-section content-section_theme_dark">
+        <div class="title_two">
+          <h3 class="intro__title">
+            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
+          </h3>
+          <p class="content-section__introduction">
+            5 простых (на самом деле не очень) советов
+          </p>
+          <p class="color-span">Представьте небо и облака</p>
+          <p class="card__text">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+          </p>
+          <p class="color-span">Включите музыку</p>
+          <p class="card__text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+          <p class="color-span">Прогуляйтесь</p>
+          <p class="card__text">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+              показал
+          </p>
+          <p class="color-span">Хорошо ешьте</p>
+          <p class="card__text">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+          <p class="color-span">Читайте</p>
+          <p class="card__text">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+          </p>
+        </div>
+      </section>
+
+      <section class="title_two">
+        <p class="color-span">А можно в картинках?</p>
+          <div class="container">
+            <div class="container_img">
+              <img src="./images/sunset.png" 
+              alt="Закат."
+              loading="lazy"/>
+            </div>
+            <div class="container_img">
+              <img src="./images/ice-cream.png" 
+              alt="Мороженное."
+              loading="lazy"/>
+            </div>
+            <div class="container_img">
+              <img src="./images/tape.png" 
+              alt="Касета."
+              loading="lazy"/>
+            </div>
+            <div class="container_img">
+              <img src="./images/books.png" 
+              alt="Книги."
+              loading="lazy"/>
+            </div>
+            <div class="container_img">
+              <img src="./images/street.png" 
+              alt="Улица."
+              loading="lazy"/>
+            </div>
+          </div>
+      </section>
+    </main>
+
+    <footer class="footer decorated-zone">
+      <h4 class="footer__title">
+        focus
+      </h4>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
