working on header, part 1

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1 class="cover__title">
         no focus
       </h1>
-      <section class="content-section content-section_theme_dark">
+      <section class="content-section content-section_theme_dark header_content_section">
         <div class="heading">
             <h2 class="title">
               Что делать, когда не можешь делать ничего 
