favicon now works

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="fonts/fonts.css">
-    <link type="Image/x-icon" href="/favicon.ico" rel="icon">
+    <link type="Image/x-icon" href="./images/favicon.ico" rel="icon">
   </head>
   <body class="page">
     <!-- <section class="cover"> -->
