--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="main-text">
       <section class="content-section card-one">
         <h3 class="intro__title">Почему сосредоточиться так сложно</h3>
-          <div class="title_two">
+        <div class="title_two">
             <h4 class="content-section__introduction">Многозадачность</h4>
             <p class="card__text">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
@@ -64,15 +64,15 @@
               >выяснили</a
             >, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
-          </div>
+        </div>
 
-          <div class="title_two">
+        <div class="title_two">
             <h4 class="content-section__introduction">Дофамин</h4>
             <p class="card__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
             </p>
-          </div>
-        </section>
+        </div>
+      </section>
 
       <section class="content-section card-two">
         <h3 class="intro__title">Что снижает концентрацию внимания?</h3>
@@ -98,25 +98,25 @@
         </div>
       </section>
 
-      <div class="content-section card-three">
+      <section class="content-section card-three">
         <h3 class="intro__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
-          <div class="title_two">
-            <h4 class="content-section__introduction">5 простых (на самом деле не очень) советов</h4>
-            <h5 class="color-span">Представьте небо и облака</h5>
+        <div class="title_two">
+            <h4 class="content-section__block" >5 простых (на самом деле не очень) советов</h4>
+            <h5 class="card__title">Представьте небо и облака</h5>
             <p class="card__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
             </p>
-          </div>
+        </div>
 
-          <div class="title_two">
-            <h5 class="color-span">Включите музыку</h5>
-            <p class="card__text">
-              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-            </p>
-          </div>
+        <div class="title_two">
+          <h5 class="card__title">Включите музыку</h5>
+          <p class="card__text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </div>
 
-          <div class="title_two">
-            <h5 class="color-span">Прогуляйтесь</h5>
+        <div class="title_two">
+            <h5 class="card__title">Прогуляйтесь</h5>
             <p class="card__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
@@ -126,57 +126,57 @@
               >, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
                 показал
             </p>
-          </div>
+        </div>
 
-          <div class="title_two">
-            <h5 class="color-span">Хорошо ешьте</h5>
+        <div class="title_two">
+            <h5 class="card__title">Хорошо ешьте</h5>
             <p class="card__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
-          </div>
+        </div>
 
-          <div class="title_two">
-            <h5 class="color-span">Читайте</h5>
+        <div class="title_two">
+            <h5 class="card__title">Читайте</h5>
             <p class="card__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
             </p>
         </div>
       </section>
 
-      <section class="title_four">
+      <section class="content-section card-four">
         <h4 class="content-section__introduction">А можно в картинках?</h4>
-          <div class="card__picture">
-            <img 
-            class="card__picture img"
+        <div class="card__picture">
+          <img 
+            class="card__picture_img"
             src="./images/sunset.png" 
-              alt="Закат"
-              loading="lazy"
-              />
-              <img 
-              class="card__picture img"
-              src="./images/ice-cream.png" 
-              alt="Мороженное"
-              loading="lazy"
-              />
-              <img 
-              class="card__picture_img"
-              src="./images/tape.png" 
-              alt="Касета"
-              loading="lazy"
-              />
-              <img 
-              class="card__picture_img"
-              src="./images/books.png" 
-              alt="Книги."
-              loading="lazy"
-              />
-              <img 
-              class="card__picture_img"
-              src="./images/street.png" 
-              alt="Улица"
-              loading="lazy"
-              />
-          </div>
+            alt="Закат"
+            loading="lazy"
+          />
+          <img 
+            class="card__picture_img"
+            src="./images/ice-cream.png" 
+            alt="Мороженное"
+            loading="lazy"
+          />
+          <img 
+            class="card__picture_img"
+            src="./images/tape.png" 
+            alt="Касета"
+            loading="lazy"
+          />
+          <img 
+            class="card__picture_img"
+            src="./images/books.png" 
+            alt="Книги."
+            loading="lazy"
+          />
+          <img 
+            class="card__picture_img"
+            src="./images/street.png" 
+            alt="Улица"
+            loading="lazy"
+          />
+        </div>
       </section>
     </main>
 
