--- a/index.html
+++ b/index.html
@@ -53,30 +53,32 @@
     <main class="main-text">
       <section class="content-section card-one">
         <h3 class="intro__title">Почему сосредоточиться так сложно</h3>
-        <div class="title_two">
-            <h4 class="content-section__introduction">Многозадачность</h4>
-            <p class="card__text">
-              Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
-              Исследователи 
-              <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/" 
-              class="link" 
-              target="_blank"
-              >выяснили</a
-            >, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
-            </p>
-        </div>
+        <div class="article">
+          <div class="title_two">
+              <h4 class="content-section__introduction">Многозадачность</h4>
+              <p class="card__text">
+                Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
+                Исследователи 
+                <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/" 
+                class="link" 
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+              </p>
+          </div>
 
-        <div class="title_two">
-            <h4 class="content-section__introduction">Дофамин</h4>
-            <p class="card__text">
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
-            </p>
+          <div class="title_two">
+              <h4 class="content-section__introduction">Дофамин</h4>
+              <p class="card__text">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+              </p>
+          </div>
         </div>
       </section>
 
       <section class="content-section card-two">
         <h3 class="intro__title">Что снижает концентрацию внимания?</h3>
-          <div class="title_two">
+          <div class="title_two card__two">
             <h4 class="content-section__introduction">Многозадачность</h4>
             <p class="card__text">
               Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
@@ -100,46 +102,48 @@
 
       <section class="content-section card-three">
         <h3 class="intro__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
-        <div class="title_two">
-            <h4 class="content-section__block" >5 простых (на самом деле не очень) советов</h4>
-            <h5 class="card__title">Представьте небо и облака</h5>
-            <p class="card__text">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
-            </p>
-        </div>
+        <div class="article">
+          <div class="title_two">
+              <h4 class="content-section__block" >5 простых (на самом деле не очень) советов</h4>
+              <h5 class="card__title">Представьте небо и облака</h5>
+              <p class="card__text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+              </p>
+          </div>
 
-        <div class="title_two">
-          <h5 class="card__title">Включите музыку</h5>
-          <p class="card__text">
-            Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-          </p>
-        </div>
-
-        <div class="title_two">
-            <h5 class="card__title">Прогуляйтесь</h5>
+          <div class="title_two">
+            <h5 class="card__title">Включите музыку</h5>
             <p class="card__text">
-                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a
-                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                target="_blank"
-                class="link"
-                >показал</a
-              >, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-                показал
+              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
             </p>
-        </div>
+          </div>
 
-        <div class="title_two">
-            <h5 class="card__title">Хорошо ешьте</h5>
-            <p class="card__text">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-            </p>
-        </div>
+          <div class="title_two">
+              <h5 class="card__title">Прогуляйтесь</h5>
+              <p class="card__text">
+                  Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
+                  class="link"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+                  показал
+              </p>
+          </div>
 
-        <div class="title_two">
-            <h5 class="card__title">Читайте</h5>
-            <p class="card__text">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
-            </p>
+          <div class="title_two">
+              <h5 class="card__title">Хорошо ешьте</h5>
+              <p class="card__text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              </p>
+          </div>
+      
+          <div class="title_two">
+              <h5 class="card__title">Читайте</h5>
+              <p class="card__text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+              </p>
+          </div>
         </div>
       </section>
 
