mid view: images perfectly aligned

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section class="content-section card-four">
+      <section class="images-section card-four">
         <h4 class="content-section__introduction">А можно в картинках?</h4>
         <div class="card__picture">
           <img 
