--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     
     <main class="main-text">
-      <section class="content-section card-one">
+      <section class="content-section card-why">
         <h3 class="intro__title">Почему сосредоточиться так сложно</h3>
         <div class="article">
           <div class="title_two">
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section class="content-section card-two">
+      <section class="content-section card-what">
         <h3 class="intro__title">Что снижает концентрацию внимания?</h3>
         <div class="title_two paragraph1">
           <h4 class="content-section__introduction">Многозадачность</h4>
@@ -100,7 +100,7 @@
         </div>
       </section>
 
-      <section class="content-section card-three">
+      <section class="content-section card-how">
         <h3 class="intro__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
         <div class="article">
           <div class="title_two">
