--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="content-section card-why">
         <h2 class="intro__title">Почему сосредоточиться так сложно</h2>
         <div class="article">
-          <article class="title_two">
+          <article class="title_advice">
               <h2 class="content-section__introduction">Многозадачность</h2>
               <p class="card__text">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
@@ -67,7 +67,7 @@
               </p>
           </article>
 
-          <article class="title_two">
+          <article class="title_advice">
               <h2 class="content-section__introduction">Дофамин</h2>
               <p class="card__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
@@ -78,21 +78,21 @@
 
       <section class="content-section card-what">
         <h2 class="intro__title">Что снижает концентрацию внимания?</h2>
-        <darticle class="title_two paragraph1">
+        <darticle class="title_advice paragraph1">
           <h2 class="content-section__introduction">Многозадачность</h2>
           <p class="card__text">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
         </darticle>
 
-        <article class="title_two paragraph2">
+        <article class="title_advice paragraph2">
           <h2 class="content-section__introduction">Еда</h2>
           <p class="card__text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
           </p>
         </article>
 
-        <article class="title_two paragraph3">
+        <article class="title_advice paragraph3">
           <h2 class="content-section__introduction">Гаджеты</h2>
           <p class="card__text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
@@ -103,7 +103,7 @@
       <section class="content-section card-how">
         <h2 class="intro__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="article">
-          <article class="title_two">
+          <article class="title_advice">
               <h2 class="content-section__block" >5 простых (на самом деле не очень) советов</h2>
               <h3 class="card__title">Представьте небо и облака</h3>
               <p class="card__text">
@@ -111,14 +111,14 @@
               </p>
           </article>
 
-          <article class="title_two">
+          <article class="title_advice">
             <h3 class="card__title">Включите музыку</h3>
             <p class="card__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
             </p>
           </article>
 
-          <darticle class="title_two">
+          <darticle class="title_advice">
               <h3 class="card__title">Прогуляйтесь</h3>
               <p class="card__text">
                   Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a
@@ -130,14 +130,14 @@
               </p>
           </darticle>
 
-          <article class="title_two">
+          <article class="title_advice">
               <h3 class="card__title">Хорошо ешьте</h3>
               <p class="card__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
               </p>
           </article>
       
-          <article class="title_two">
+          <article class="title_advice">
               <h3 class="card__title">Читайте</h3>
               <p class="card__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
