--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
       <section class="content-section card-what">
         <h2 class="intro__title">Что снижает концентрацию внимания?</h2>
-        <darticle class="title_advice paragraph1">
+        <article class="title_advice paragraph1">
           <h2 class="content-section__introduction">Многозадачность</h2>
           <p class="card__text">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
-        </darticle>
+        </article>
 
         <article class="title_advice paragraph2">
           <h2 class="content-section__introduction">Еда</h2>
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section class="images-section card-four">
+      <section class="images-section card-pictures">
         <h2 class="content-section__introduction">А можно в картинках?</h2>
         <div class="card__picture">
           <img 
