--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
 
       <section class="content-section card-what">
         <h2 class="intro__title common__text">Что снижает концентрацию внимания?</h2>
-        <article class="title_advice paragraph1">
+        <article class="title_advice paragraph_multitasking">
           <h3 class="content-section__introduction">Многозадачность</h3>
           <p class="card__text common__text">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
         </article>
 
-        <article class="title_advice paragraph2">
+        <article class="title_advice paragraph_food">
           <h3 class="content-section__introduction">Еда</h3>
           <p class="card__text common__text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
           </p>
         </article>
 
-        <article class="title_advice paragraph3">
+        <article class="title_advice paragraph_gadgets">
           <h3 class="content-section__introduction">Гаджеты</h3>
           <p class="card__text common__text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
