fix common text styles

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
+              class="text header__theme-menu-button header__theme-menu-button_type_light"
             >
               День
             </button>
           </li>
           <li class="header__theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              class="text header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
               Авто
@@ -36,7 +36,7 @@
           </li>
           <li class="header__theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
+              class="text header__theme-menu-button header__theme-menu-button_type_dark"
             >
               Неон
             </button>
@@ -44,7 +44,7 @@
         </ul>
       </nav>
       <h1 class="cover__title">no focus</h1>
-      <h2 class="header__description title-decor">
+      <h2 class="header__description title-decor text">
         Что делать, когда не можешь делать ничего<br/>
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </h2>
@@ -55,7 +55,7 @@
         <h2 class="intro__title text">Почему сосредоточиться так сложно</h2>
         <div class="article">
           <article class="title_advice">
-              <h3 class="content-section__introduction">Многозадачность</h3>
+              <h3 class="content-section__introduction text">Многозадачность</h3>
               <p class="card__text text">
                 Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. 
                 Исследователи 
@@ -68,7 +68,7 @@
           </article>
 
           <article class="title_advice">
-              <h3 class="content-section__introduction">Дофамин</h3>
+              <h3 class="content-section__introduction text">Дофамин</h3>
               <p class="card__text text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
               </p>
@@ -79,21 +79,21 @@
       <section class="content-section card-what">
         <h2 class="intro__title text">Что снижает концентрацию внимания?</h2>
         <article class="title_advice paragraph_multitasking">
-          <h3 class="content-section__introduction">Многозадачность</h3>
+          <h3 class="content-section__introduction text">Многозадачность</h3>
           <p class="card__text text">
             Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
           </p>
         </article>
 
         <article class="title_advice paragraph_food">
-          <h3 class="content-section__introduction">Еда</h3>
+          <h3 class="content-section__introduction text">Еда</h3>
           <p class="card__text text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
           </p>
         </article>
 
         <article class="title_advice paragraph_gadgets">
-          <h3 class="content-section__introduction">Гаджеты</h3>
+          <h3 class="content-section__introduction text">Гаджеты</h3>
           <p class="card__text text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
           </p>
@@ -103,7 +103,7 @@
       <section class="content-section card-how">
         <h2 class="intro__title text">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="article">
-          <h3 class="content-section__introduction">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="content-section__introduction text">5 простых (на самом деле не очень) советов</h3>
 
           <article class="title_advice">
             <h4 class="card__title text">Представьте небо и облака</h4>
@@ -148,7 +148,7 @@
       </section>
 
       <section class="images-section card-pictures">
-        <h2 class="content-section__introduction">А можно в картинках?</h2>
+        <h2 class="content-section__introduction text">А можно в картинках?</h2>
         <div class="card__picture">
           <img 
             class="card__picture_img"
